Fixed vertical scroll on mobile

--- a/src/scss/layouts/page.scss
+++ b/src/scss/layouts/page.scss
@@ -1,2 +1,8 @@
 .page {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(var(--vh, 1vh) * 100);
+  justify-content: center;
+  align-items: center;
+  gap: $margin-2;
 }
