--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -1,11 +1,2 @@
 .index {
 }
-
-.page {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  justify-content: center;
-  align-items: center;
-  gap: $margin-3;
-}
